static images for homepage

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,12 +10,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-
+		
     <title>GET SERVERD</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'getServed/css/bootstrap.min.css' %}" rel="stylesheet">
-
 
     <!-- Custom styles for this template -->
     <link href="{% static 'getServed/css/navbar-fixed.top.css' %}" rel="stylesheet">
@@ -81,7 +80,33 @@
       </div>
 
     </div> <!-- /container -->
+ 
+		
+		<div class="jumbotron">
+			<h2>Your city's top 4!</h2>
+		</div>
+		
+		<div class="container">
+				<div class="row">
+					<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
+						<img src="{% static 'getServed/img/itlogo.jpg'%}">
+					</section>
+					
+					<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
+						<img src="{% static 'getServed/img/pizlogo.jpg'%}">
+					</section>
+					
+					<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
+						<img src="{% static 'getServed/img/mexlogo.jpg'%}">
+					</section>
+					
+					<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
+						<img src="{% static 'getServed/img/chlogo.jpg'%}">
+					</section>
+				</div>
+			</div>
 
+    </div> <!-- /container -->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
