--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -81,10 +81,54 @@
 
     </div> <!-- /container -->
  
+		<h2>Your city's top 4!</h2>
 		
-		<div class="jumbotron">
-			<h2>Your city's top 4!</h2>
-		</div>
+		<style>
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+  </style>
+		
+		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <img src="{% static 'getServed/img/itlogo.jpg'%}" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="{% static 'getServed/img/pizlogo.jpg'%}" alt="Chania">
+    </div>
+
+    <div class="item">
+      <img src="{% static 'getServed/img/mexlogo.jpg'%}" alt="Flower">
+    </div>
+
+    <div class="item">
+      <img src="{% static 'getServed/img/chlogo.jpg'%}" alt="Flower">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
 		
 		<div class="container">
 				<div class="row">
