--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,90 +1,14 @@
+{% extends "header.html" %}
+{% load staticfiles %}
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-      {% load staticfiles %}
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-		
-    <title>GET SERVERD</title>
+{% block content %}
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'getServed/css/bootstrap.min.css' %}" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="{% static 'getServed/css/navbar-fixed.top.css' %}" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Best Served</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#submit">Submit</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Restaurants <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">American</a></li>
-                <li><a href="#">Asian</a></li>
-                <li><a href="#">Italian</a></li>
-                <li><a href="#">Mexican</a></li>
-                <li><a href="#">Mediterranean</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar-static-top/">Sign Up</a></li>
-            <li><a href="./">Log In <span class="sr-only">(current)</span></a></li>
-              <li>
-                  <form action="" class="search-form" style="padding-top: 10px">
-                <div class="form-group has-feedback">
-            		<label for="search" class="sr-only">Search</label>
-            		<input type="text" class="form-control" name="search" id="search" placeholder="search">
-              		<span class="glyphicon glyphicon-search form-control-feedback"></span>
-            	</div>
-            </form>
-              </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>WELCOME TO BEST SERVED WHERE YOU GET SERVED!</h1>
-        <p>This to illustrate how the default, static and fixed to top navbar work. It includes the responsive CSS and HTML, so it also adapts to your viewport and device.</p>
-        <p>To see the difference between static and fixed top navbars, just scroll.</p>
-        <p>
-          <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs &raquo;</a>
-        </p>
+    <div class="jumbotron">
       </div>
 
-    </div> <!-- /container -->
-		
-	
-	<center><h2>Your city's top 4!</h2></center>
-	
-	
+    <center><h2>Your city's top 4!</h2></center>
+
+
 	<!--carousel element sizing-->
 	<style>
   .carousel-inner > .item > img,
@@ -93,7 +17,7 @@
       margin: auto;
   }
   </style>
-		
+
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
 		<ol class="carousel-indicators">
@@ -105,20 +29,36 @@
 
   <!-- Wrapper for slides -->
 		<div class="carousel-inner" role="listbox">
-			<div class="item active">
+			<div class="item active" >
 				<img src="{% static 'getServed/img/itlogo.jpg'%}" alt="Chania">
+				<div class="carousel-caption"> 
+					<h3>Caption</h3>
+					<p>Some more caption stuff</p>
+				</div>
 			</div>
 
 			<div class="item">
 				<img src="{% static 'getServed/img/pizlogo.jpg'%}" alt="Chania">
+				<div class="carousel-caption"> 
+					<h3>Caption</h3>
+					<p>Some more caption stuff</p>
+				</div>
 			</div>
 
 			<div class="item">
 				<img src="{% static 'getServed/img/mexlogo.jpg'%}" alt="Flower">
+				<div class="carousel-caption"> 
+					<h3>Caption</h3>
+					<p>Some more caption stuff</p>
+				</div>
 			</div>
 
 			<div class="item">
-				<img src="{% static 'getServed/img/chlogo.jpg'%}" alt="Flower">
+				<img src="{% static 'getServed/img/chlogo.jpg' %}" alt="Flower">
+				<div class="carousel-caption"> 
+					<h3>Caption</h3>
+					<p>Some more caption stuff</p>
+				</div>
 			</div>
 		</div>
 
@@ -132,36 +72,25 @@
 			<span class="sr-only">Next</span>
 		</a>
 	</div>
-		
+
 	<div class="container">
 		<div class="row">
 			<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
 				<img src="{% static 'getServed/img/itlogo.jpg'%}">
 			</section>
-			
+
 			<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
 				<img src="{% static 'getServed/img/pizlogo.jpg'%}">
 			</section>
-				
+
 			<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
 				<img src="{% static 'getServed/img/mexlogo.jpg'%}">
 			</section>
-				
+
 			<section class="col-xs-offset-3 col-xs-6 col-sm-offset-0 col-sm-6">
 				<img src="{% static 'getServed/img/chlogo.jpg'%}">
 			</section>
 		</div>
 	</div>
 
-<!-- /container -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'getServed/js/jquery.min.js' %}"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="{% static 'getServed/js/bootstrap.min.js' %}"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'getServed/js/ie10-viewport-bug-workaround.js' %}"></script>
-  </body>
-</html>
+{% endblock %}
